<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="language">Language</string>
    <string name="languageselection">Language Selection</string>
    <string name="sortyby">Sort by</string>
    <string name="layout" tools:ignore="UnusedResources">Layout</string>
    <string name="popular">Most Popular</string>
    <string name="toprated">Top Rated</string>
    <string name="refresh">Refresh</string>
    <string name="rating">Rating</string>
    <string name="released">Released</string>
    <string name="genre">Genre</string>
    <string name="unknown">Unknown</string>
    <string name="loading">Loading</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="body">Body</string>
    <string name="favorites">Favourites</string>
    <string name="action_settings" tools:ignore="UnusedResources">Settings</string>
    <string name="overview">Overview</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="trailers" tools:ignore="UnusedResources">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="anon">Anonymous</string>
    <string name="availablenot">Not available</string>
    <string name="erroroccurred">An error occurred</string>
    <string name="addedtofaves">Added to favourites</string>
    <string name="removedfromfaves">Removed from favourites</string>
    <string name="error">Error</string>
    <string name="connection">Connection</string>
    <string name="nofavesavail">No favourites available</string>
</resources>
