<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menurefresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/menufavorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menufilter"
        android:icon="@drawable/ic_movie_filter_white_24dp"
        android:title="@string/sortyby"
        app:showAsAction="never" />
    <item android:id="@+id/menulayout"
        android:icon="@drawable/ic_view_module_white_24dp"
        android:title="@string/switch_layout"
        app:showAsAction="never" />
    <item android:id="@+id/menulang"
        android:icon="@drawable/ic_language_white_24dp"
        android:title="@string/language"
        app:showAsAction="never" />

</menu>