<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.bf.popularmovies.ui.activity.Details2Activity">

    <RelativeLayout
        android:id="@+id/layout_detail_poster_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_moviebackdropimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:foreground="@drawable/postergradientreversed"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="Backdrop image" />

        <TextView
            android:id="@+id/tv_detail_movietitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="end"
            android:paddingTop="17dp"
            android:paddingRight="20dp"
            android:paddingLeft="0dp"
            android:textSize="36sp"
            android:text="@string/title"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_detail_poster_sub"
        android:layout_below="@+id/layout_detail_poster_overlay"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="start"
            android:padding="12dp"
            android:textSize="14sp"
            android:text="@string/title"/>

    </RelativeLayout>

    <com.bf.popularmovies.ui.controls.FixedViewPager
        android:id="@+id/viewpager_sections"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_detail_poster_sub"
        android:layout_above="@+id/tabsSections"
        android:layout_weight="1"
        android:animateLayoutChanges="false"
        android:background="@android:color/white" />

    <RelativeLayout
        android:id="@+id/layout_detail_movieposterimageholder"
        android:layout_below="@+id/layout_detail_poster_overlay"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_marginTop="-98dp"
        android:gravity="end"
        android:padding="10dp"
        android:layout_height="190dp">

        <android.support.v7.widget.CardView
            android:id="@+id/layout_cardposter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="6dp"
            android:animateLayoutChanges="true"
            android:background="@color/colorPrimary"
            card_view:elevation="8dp">

            <RelativeLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">

                <ImageView
                    android:id="@+id/iv_detail_movieposterimage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:contentDescription="Poster image" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabsSections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:tabIndicatorColor="@android:color/white"
        card_view:tabIndicatorHeight="1.5dp"
        card_view:tabMode="fixed"
        card_view:tabBackground="@color/colorPrimaryMid"
        card_view:tabTextColor="@android:color/white"
        android:layout_above="@+id/layout_detail_footer">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />

    </android.support.design.widget.TabLayout>


<!--
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/tabsSections"
        android:layout_below="@+id/layout_detail_captions"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_bodytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayMid"
                android:padding="16dp"
                android:textSize="15sp"
                android:text="@string/body"/>

        </LinearLayout>
    </ScrollView>
-->

    <RelativeLayout
        android:id="@+id/layout_detail_footer"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            card_view:srcCompat="@drawable/ic_favorite_border_white_24dp" />

        <TextView
            android:id="@+id/tv_detail_footer_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:textSize="14sp"
            android:text="@string/rating"/>


    </RelativeLayout>

</RelativeLayout>